--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -78,15 +78,15 @@ jobs:
     - name: Check out code
       uses: actions/checkout@v4
       
-    - name: Initialize CodeQL
-      uses: github/codeql-action/init@v3
-      with:
-        languages: ${{ matrix.language }}
-        
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
         go-version: ${{ env.GO_VERSION }}
+        
+    - name: Initialize CodeQL
+      uses: github/codeql-action/init@v3
+      with:
+        languages: ${{ matrix.language }}
         
     - name: Build
       run: go build -v ./...
@@ -165,6 +165,7 @@ jobs:
       uses: anchore/scan-action@v3
       with:
         sbom: "sbom.spdx.json"
+        severity-cutoff: high
         fail-build: false
       continue-on-error: true
 
